test/compile_errors/err_recovery_unclosed_paren.w
//! expect-error: expected

fn main:
    let x = foo(1, 2
    let y = 10
    print(y)
